# tangle

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  GOVERNANCE.md  PR_DESCRIPTION.md  README.md  RELEASING.md  SECURITY.md  alembic.ini  api_server_main.py  db.sqlite  orchestrator_main.py  pyproject.toml  start_local.cmd  start_local.py  start_local.sh  start_local_skypilot.py
.github/: dependabot.yml
.github/workflows/: run_tests_on_push.yaml
alembic/: env.py
alembic/versions/: 457e50b9271c_add_status_and_has_ended_to_pipeline_run.py  a1f3c8d92e47_add_annotation_key_value_index.py  b86b67add848_baseline_schema.py
cloud_pipelines_backend/: api_router.py  api_server_sql.py  backend_types_sql.py  component_library_api_server.py  component_structures.py  container_statuses.py  database_migrate.py  database_migrations.py  database_ops.py  errors.py  event_listeners.py  filter_query_models.py  filter_query_sql.py  middleware.py  orchestrator_sql.py  query_tracker.py  sql_event_listeners.py  status_utils.py
cloud_pipelines_backend/annotation/: utils.py
cloud_pipelines_backend/backfill/: annotations.py
cloud_pipelines_backend/execution/: utils.py
cloud_pipelines_backend/instrumentation/: api_tracing.py  bugsnag_instrumentation.py  contextual_logging.py  error_normalization.py  execution_tracing.py  metrics.py  metrics_poller.py  metrics_polling.py  otel_tracing.py  structured_logging.py
cloud_pipelines_backend/instrumentation/opentelemetry/: __init__.py  auto_instrumentation.py  metrics.py  providers.py  tracing.py
cloud_pipelines_backend/instrumentation/opentelemetry/_internal/: config.py  configuration.py  providers.py  temporality.py
cloud_pipelines_backend/instrumentation/opentelemetry/_internal/tests/: test_config.py  test_providers.py  test_temporality.py
cloud_pipelines_backend/instrumentation/opentelemetry/tests/: conftest.py  test_auto_instrumentation.py  test_metrics.py  test_providers.py  test_tracing.py
cloud_pipelines_backend/launchers/: common_annotations.py  container_component_utils.py  google_kubernetes_launchers.py  huggingface_launchers.py  interfaces.py  kubernetes_launchers.py  local_docker_launchers.py  skypilot_launchers.py
cloud_pipelines_backend/runtime/: __init__.py  multi_node.py
cloud_pipelines_backend/search/: filter_query_models.py  filter_query_sql.py  models.py  runs.py
cloud_pipelines_backend/storage_providers/: huggingface_repo_storage.py  patched_google_cloud_storage.py
examples/: multicluster_inference_e2e.py  multinode_pipeline_e2e.py  publish_skypilot_components.py  skypilot_launcher_dryrun.py
examples/observability/otel-jaeger-prometheus/: docker-compose.yml  otel-collector-config.yaml  prometheus.yml
examples/skypilot/: multicluster_inference_e2e.py  multinode_pipeline_e2e.py  publish_skypilot_components.py  skypilot_launcher_dryrun.py
ideas/: CODEBASE_IMPROVEMENTS.md
n1_check/: __main__.py  detectors.py  relationships.py
observability-example/: README.md
tests/: conftest.py  test_api_server_sql.py  test_component_library_api_server.py  test_context_aware_formatter_exception.py  test_database_migrate.py  test_database_migrations.py  test_database_ops.py  test_event_listeners.py  test_execution_nodes_api_service.py  test_filter_query_models.py  test_filter_query_sql.py  test_instrumentation_logging_context.py  test_instrumentation_request_middleware.py  test_kubernetes_launchers.py  test_kubernetes_multi_node.py  test_kubernetes_pod_retry.py  test_middleware.py  test_multi_node_runtime.py  test_n_plus_one.py  test_orchestrator_cleanup.py  test_orchestrator_sql.py  test_orchestrator_terminal_state.py  test_orchestrator_transient_infra.py  test_patched_google_cloud_storage.py  test_pending_deadline_watchdog.py  test_pipeline_run_search.py  test_request_id_concurrency.py  test_secrets.py  test_skypilot_launchers.py  test_sql_event_listeners.py
tests/annotation/: test_utils.py
tests/backfill/: test_annotations.py
tests/execution/: test_utils.py
tests/instrumentation/: test_bugsnag.py  test_contextual_logging.py  test_error_normalization.py  test_execution_tracing.py
tests/instrumentation/opentelemetry/: test_metrics.py  test_providers.py  test_tracing.py
tests/instrumentation/opentelemetry/_internal/: test_configuration.py  test_temporality.py
tests/search/: test_filter_query_models.py  test_filter_query_sql.py  test_runs.py
