[project]
name = "cloud-pipelines-backend"
version = "0.1.0"
description = "Backend for Cloud Pipelines"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cloud-pipelines>=0.23.2.4",
    "fastapi[standard]>=0.115.12",
    "kubernetes>=33.1.0",
    "opentelemetry-api>=1.28.2",
    "opentelemetry-exporter-otlp-proto-grpc>=1.39.1",
    "opentelemetry-exporter-otlp-proto-http>=1.39.1",
    "opentelemetry-instrumentation-fastapi>=0.60b1",
    "opentelemetry-sdk>=1.39.1",
    "requests<2.32.0",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = [
    "mypy>=1.15",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.25.2",
    "ruff>=0.11",
]
huggingface = [
    "huggingface-hub[oauth]>=0.35.3",
]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long (let the formatter handle what it can)
]

[tool.ruff.lint.per-file-ignores]
"start_local.py" = ["E402"]  # imports not at top (by design, uses region blocks)
"cloud_pipelines_backend/api_server_sql.py" = ["E402"]  # imports after early class/function definitions

[tool.ruff.lint.isort]
known-first-party = ["cloud_pipelines", "cloud_pipelines_backend"]


[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.setuptools.packages.find]
include = ["cloud_pipelines_backend*"]
namespaces = true
