[project]
name = "cloud-pipelines-backend"
version = "0.1.0"
description = "Backend for Cloud Pipelines"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.18.4",
    "cloud-pipelines>=0.23.2.4",
    "fastapi[standard]>=0.115.12",
    "kubernetes>=33.1.0",
    "opentelemetry-api>=1.41.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.39.1",
    "opentelemetry-exporter-otlp-proto-http>=1.39.1",
    "opentelemetry-instrumentation-fastapi>=0.60b1",
    "opentelemetry-sdk>=1.39.1",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "kubernetes-stubs-elephant-fork>=35.0.0.post1",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.25.2",
]
huggingface = [
    "huggingface-hub[oauth]>=0.35.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
[tool.setuptools.packages.find]
include = ["cloud_pipelines_backend*"]
namespaces = true
